chore(grid): replace grid vars with table vars

--- a/packages/bootstrap/scss/grid/_index.scss
+++ b/packages/bootstrap/scss/grid/_index.scss
@@ -25,6 +25,7 @@
 @import "../utils/_float.scss";
 @import "../utils/_spacer.scss";
 @import "../list/_index.scss";
+@import "../table/_index.scss";
 
 
 // Component
