--- a/packages/material/scss/table/_theme.scss
+++ b/packages/material/scss/table/_theme.scss
@@ -5,8 +5,8 @@
     // Selected state
     .k-table-tbody .k-table-row.k-selected,
     .k-table-tbody .k-table-cell.k-selected {
-        color: $kendo-grid-selected-text;
-        background-color: $kendo-grid-selected-bg;
+        color: $kendo-table-selected-text;
+        background-color: $kendo-table-selected-bg;
     }
 
     .k-table-tbody .k-table-row.k-selected > td {
@@ -20,33 +20,7 @@
         th:focus,
         th.k-focus {
             color: inherit;
-            background-color: $kendo-grid-hovered-bg;
-        }
-    }
-
-}
-
-@include exports( "table/theme/material" ) {
-
-    // Selected state
-    .k-table-tbody .k-table-row.k-selected,
-    .k-table-tbody .k-table-cell.k-selected {
-        color: $kendo-grid-selected-text;
-        background-color: $kendo-grid-selected-bg;
-    }
-
-    .k-table-tbody .k-table-row.k-selected > td {
-        color: inherit;
-        background-color: transparent;
-    }
-
-    .k-table .k-table-tbody {
-        td:focus,
-        td.k-focus,
-        th:focus,
-        th.k-focus {
-            color: inherit;
-            background-color: $kendo-grid-hovered-bg;
+            background-color: $kendo-table-hover-bg;
         }
     }
 
