--- a/packages/material/scss/grid/_index.scss
+++ b/packages/material/scss/grid/_index.scss
@@ -24,7 +24,7 @@
 @import "../skeleton/_index.scss";
 @import "../utils/_float.scss";
 @import "../utils/_spacer.scss";
-@import "../list/_index.scss";
+@import "../table/_index.scss";
 
 
 // Component
