--- a/packages/default/scss/action-sheet/_layout.scss
+++ b/packages/default/scss/action-sheet/_layout.scss
@@ -141,6 +141,8 @@
     .k-actionsheet-item {
         padding: 0;
         box-sizing: border-box;
+        display: flex;
+        flex-flow: row nowrap;
     }
     .k-actionsheet-action {
         margin: 0;
