--- a/packages/fluent/scss/action-sheet/_layout.scss
+++ b/packages/fluent/scss/action-sheet/_layout.scss
@@ -160,6 +160,8 @@
     .k-actionsheet-item {
         padding: 0;
         box-sizing: border-box;
+        display: flex;
+        flex-flow: row nowrap;
 
         &:focus,
         &.k-focus {
