fix(actionsheet): remove item outline

--- a/packages/default/scss/action-sheet/_layout.scss
+++ b/packages/default/scss/action-sheet/_layout.scss
@@ -143,6 +143,7 @@
         box-sizing: border-box;
         display: flex;
         flex-flow: row nowrap;
+        outline: none;
     }
     .k-actionsheet-action {
         margin: 0;
