--- a/packages/default/scss/action-sheet/_layout.scss
+++ b/packages/default/scss/action-sheet/_layout.scss
@@ -4,8 +4,8 @@
     .k-actionsheet-container {
         width: 100%;
         height: 100%;
-        max-width: unquote("max(100%, 100vw)");
-        max-height: unquote("max(100%, 100vh)");
+        max-width: clamp(100vw, 100%, 100%);
+        max-height: clamp(100vh, 100%, 100%);
         position: fixed;
         top: 0;
         left: 0;
