fix(spreadsheet): hide borders behind disabled/merged cells
goes along with https://github.com/telerik/kendo/pull/16387

--- a/packages/default/scss/spreadsheet/_layout.scss
+++ b/packages/default/scss/spreadsheet/_layout.scss
@@ -432,6 +432,9 @@
         position: relative;
     }
 
+    .k-spreadsheet-disabled-mask {
+        position: absolute;
+    }
 
     // Selection
     .k-spreadsheet .k-selection-wrapper {
