fix(spreadsheet): overflow: hidden on .k-spreadsheet-fixed-container
Ref telerik/kendo#16396

--- a/packages/default/scss/spreadsheet/_layout.scss
+++ b/packages/default/scss/spreadsheet/_layout.scss
@@ -273,6 +273,7 @@
         user-select: none;
         position: absolute;
         z-index: 2;
+        overflow: hidden;
     }
     .k-spreadsheet-overflow {
         position: absolute;
