--- a/packages/material/scss/drawer/_variables.scss
+++ b/packages/material/scss/drawer/_variables.scss
@@ -8,9 +8,6 @@ $drawer-font-size: $font-size !default;
 $drawer-line-height: $line-height !default;
 $drawer-content-padding-x: $padding-x !default;
 $drawer-content-padding-y: $padding-y !default;
-$drawer-item-level-padding-x: k-map-get( $spacing, 4 ) !default;
-
-$drawer-item-level-count: 5 !default;
 
 $drawer-scrollbar-width: 7px !default;
 $drawer-scrollbar-color: rgba( 156, 156, 156, .7 ) !default;
@@ -19,9 +16,13 @@ $drawer-scrollbar-radius: 20px !default;
 $drawer-scrollbar-hovered-color: rgba( 156, 156, 156, 1 ) !default;
 
 $drawer-item-padding-x: $padding-x !default;
-$drawer-item-padding-y: 12px !default;
+$drawer-item-padding-y: k-map-get( $spacing, 3 ) !default;
 $drawer-item-font-size: 16px !default;
 $drawer-item-line-height: $line-height-lg !default;
+
+$drawer-item-level-padding-x: $drawer-item-padding-x !default;
+$drawer-item-level-count: 5 !default;
+
 $drawer-icon-size: $icon-size !default;
 
 $drawer-mini-initial-width: calc(2 * #{$drawer-item-padding-x} + #{$drawer-icon-size}) !default;
