feat(core): add function for checking if element is in list

--- a/packages/core/scss/functions/_list.import.scss
+++ b/packages/core/scss/functions/_list.import.scss
@@ -2,6 +2,10 @@
     @return append( $list, $val, $separator );
 }
 
+@function k-list-includes( $list, $value ) {
+    @return k-list-index( $list, $value ) != null;
+}
+
 @function k-list-index( $list, $value ) {
     @return index( $list, $value );
 }
