feat(nouvelle): use color system for input and picker type components

--- a/packages/nouvelle/scss/dropdowngrid/_layout.scss
+++ b/packages/nouvelle/scss/dropdowngrid/_layout.scss
@@ -1,11 +1,4 @@
-@mixin kendo-dropdowngrid--layout() {
-
-    // sass-lint:disable-block no-important no-ids
-    #test-area .k-dropdowngrid {
-        display: none !important;
-    }
-
-}
+@mixin kendo-dropdowngrid--layout() {}
 
 
 
