--- a/packages/nouvelle/scss/dropdownlist/index.scss
+++ b/packages/nouvelle/scss/dropdownlist/index.scss
@@ -1,7 +1,13 @@
 // Module meta
 $_kendo-module-meta: (
     name: "dropdownlist",
-    dependencies: ()
+    dependencies: (
+        "input",
+        "icon",
+        "button",
+        "popup",
+        "list"
+    )
 );
 
 
