--- a/packages/nouvelle/scss/textbox/_variables.scss
+++ b/packages/nouvelle/scss/textbox/_variables.scss
@@ -1,76 +1,1 @@
-$kendo-textbox-padding-x: $kendo-input-padding-x !default;
-$kendo-textbox-padding-y: $kendo-input-padding-y !default;
-
-$kendo-textbox-border-width: $kendo-input-border-width !default;
-$kendo-textbox-border-style: $kendo-input-border-style !default;
-$kendo-textbox-border-radius: $kendo-input-border-radius !default;
-
-$kendo-textbox-font-family: $kendo-input-font-family !default;
-$kendo-textbox-font-size: $kendo-input-font-size !default;
-$kendo-textbox-line-height: $kendo-input-line-height !default;
-
-
-/// The background of the textbox.
-/// @group textbox
-$kendo-textbox-bg: $kendo-input-bg !default;
-/// The text color of the textbox.
-/// @group textbox
-$kendo-textbox-text: $kendo-input-text !default;
-/// The border color of the textbox.
-/// @group textbox
-$kendo-textbox-border: $kendo-input-border !default;
-$kendo-textbox-shadow: $kendo-input-shadow !default;
-
-/// The background of hovered textbox.
-/// @group textbox
-$kendo-textbox-hover-bg: $kendo-input-hover-bg !default;
-/// The text color of hovered textbox.
-/// @group textbox
-$kendo-textbox-hover-text: $kendo-input-hover-text !default;
-/// The border color of hovered textbox.
-/// @group textbox
-$kendo-textbox-hover-border: $kendo-input-hover-border !default;
-$kendo-textbox-hover-shadow: $kendo-input-hover-shadow !default;
-
-/// The text color of focus textbox.
-/// @group textbox
-$kendo-textbox-focus-text: $kendo-input-focus-text !default;
-/// The background color of focus textbox.
-/// @group textbox
-$kendo-textbox-focus-bg: $kendo-input-focus-bg !default;
-/// The border color of focus textbox.
-/// @group textbox
-$kendo-textbox-focus-border: $kendo-input-focus-border !default;
-$kendo-textbox-focus-shadow: $kendo-input-focus-shadow !default;
-
-
-
-
-// Expose
-:root {
-    --kendo-textbox-padding-x: #{$kendo-textbox-padding-x};
-    --kendo-textbox-padding-y: #{$kendo-textbox-padding-y};
-    --kendo-textbox-border-width: #{$kendo-textbox-border-width};
-    --kendo-textbox-border-style: #{$kendo-textbox-border-style};
-
-    --kendo-textbox-border-radius: #{$kendo-textbox-border-radius};
-
-    --kendo-textbox-font-family: #{$kendo-textbox-font-family};
-    --kendo-textbox-font-size: #{$kendo-textbox-font-size};
-    --kendo-textbox-line-height: #{$kendo-textbox-line-height};
-
-    --kendo-textbox-bg: #{$kendo-textbox-bg};
-    --kendo-textbox-text: #{$kendo-textbox-text};
-    --kendo-textbox-border: #{$kendo-textbox-border};
-    --kendo-textbox-shadow: #{$kendo-textbox-shadow};
-
-    --kendo-textbox-hover-bg: #{$kendo-textbox-hover-bg};
-    --kendo-textbox-hover-text: #{$kendo-textbox-hover-text};
-    --kendo-textbox-hover-border: #{$kendo-textbox-hover-border};
-    --kendo-textbox-hover-shadow: #{$kendo-textbox-hover-shadow};
-
-    --kendo-textbox-focus-bg: #{$kendo-textbox-focus-bg};
-    --kendo-textbox-focus-text: #{$kendo-textbox-focus-text};
-    --kendo-textbox-focus-border: #{$kendo-textbox-focus-border};
-    --kendo-textbox-focus-shadow: #{$kendo-textbox-focus-shadow};
-}
+// Textbox
