--- a/packages/nouvelle/scss/autocomplete/_layout.scss
+++ b/packages/nouvelle/scss/autocomplete/_layout.scss
@@ -1,29 +1,7 @@
 @mixin kendo-autocomplete--layout() {
 
-    :where(.k-autocomplete) {
-        padding: 0;
-        width: 100%;
-        border-width: var( --kendo-autocomplete-border-width, 1px );
-        border-style: var( --kendo-autocomplete-border-style, solid );
-        border-radius: var( --kendo-autocomplete-border-radius, 0 );
-        outline: 0;
-        color: inherit;
-        background: none;
-        font: inherit;
-        font-size: var( --kendo-autocomplete-font-size, inherit );
-        font-family: var( --kendo-autocomplete-font-family, inherit );
-        line-height: var( --kendo-autocomplete-line-height, inherit );
-        display: flex;
-        flex-flow: row nowrap;
-    }
-
-    // autocomplete
-    .k-autocomplete {
-        > .k-input {
-            --kendo-input-padding-x: var( --kendo-autocomplete-padding-x );
-            --kendo-input-padding-y: var( --kendo-autocomplete-padding-y );
-        }
-    }
+    // Autocomplete
+    .k-autocomplete {}
 
 }
 
