--- a/packages/nouvelle/scss/autocomplete/_theme.scss
+++ b/packages/nouvelle/scss/autocomplete/_theme.scss
@@ -1,34 +1,7 @@
 @mixin kendo-autocomplete--theme() {
 
-    :where(.k-autocomplete) {
-        color: var( --kendo-autocomplete-text, inherit );
-        background-color: var( --kendo-autocomplete-bg, transparent );
-        border-color: var( --kendo-autocomplete-border, transparent );
-        box-shadow: var( --kendo-autocomplete-shadow, none );
-    }
-
     // Autocomplete
-    .k-autocomplete {
-
-        // Hover
-        &:hover,
-        &.k-hover {
-            --kendo-autocomplete-text: var( --kendo-autocomplete-hover-text );
-            --kendo-autocomplete-bg: var( --kendo-autocomplete-hover-bg );
-            --kendo-autocomplete-border: var( --kendo-autocomplete-hover-border );
-        }
-
-        // Focus
-        &:focus,
-        &.k-focus,
-        &:focus-within {
-            --kendo-autocomplete-text: var( --kendo-autocomplete-focus-text );
-            --kendo-autocomplete-bg: var( --kendo-autocomplete-focus-bg );
-            --kendo-autocomplete-border: var( --kendo-autocomplete-focus-border );
-            --kendo-autocomplete-shadow: var( --kendo-autocomplete-focus-shaddow );
-        }
-
-    }
+    .k-autocomplete {}
 
 }
 
