--- a/packages/nouvelle/scss/autocomplete/_variables.scss
+++ b/packages/nouvelle/scss/autocomplete/_variables.scss
@@ -1,77 +1,1 @@
-$autocomplete-padding-x: $kendo-input-padding-x !default;
-$autocomplete-padding-y: $kendo-input-padding-y !default;
-
-$autocomplete-border-width: $kendo-input-border-width !default;
-$autocomplete-border-style: $kendo-input-border-style !default;
-
-$autocomplete-border-radius: $kendo-input-border-radius !default;
-
-$autocomplete-font-family: $kendo-input-font-family !default;
-$autocomplete-font-size: $kendo-input-font-size !default;
-$autocomplete-line-height: $kendo-input-line-height !default;
-
-
-/// The background of the autocomplete.
-/// @group autocomplete
-$autocomplete-bg: $kendo-input-bg !default;
-/// The text color of the autocomplete.
-/// @group autocomplete
-$autocomplete-text: $kendo-input-text !default;
-/// The border color of the autocomplete.
-/// @group autocomplete
-$autocomplete-border: $kendo-input-border !default;
-$autocomplete-shadow: $kendo-input-shadow !default;
-
-/// The background of hovered autocomplete.
-/// @group autocomplete
-$autocomplete-hover-bg: $kendo-input-hover-bg !default;
-/// The text color of hovered autocomplete.
-/// @group autocomplete
-$autocomplete-hover-text: $kendo-input-hover-text !default;
-/// The border color of hovered autocomplete.
-/// @group autocomplete
-$autocomplete-hover-border: $kendo-input-hover-border !default;
-$autocomplete-hover-shadow: $kendo-input-hover-shadow !default;
-
-/// The text color of focus autocomplete.
-/// @group autocomplete
-$autocomplete-focus-text: $kendo-input-focus-text !default;
-/// The background color of focus autocomplete.
-/// @group autocomplete
-$autocomplete-focus-bg: $kendo-input-focus-bg !default;
-/// The border color of focus autocomplete.
-/// @group autocomplete
-$autocomplete-focus-border: $kendo-input-focus-border !default;
-$autocomplete-focus-shadow: $kendo-input-focus-shadow !default;
-
-
-
-
-// Expose
-:root {
-    --kendo-autocomplete-padding-x: #{$autocomplete-padding-x};
-    --kendo-autocomplete-padding-y: #{$autocomplete-padding-y};
-    --kendo-autocomplete-border-width: #{$autocomplete-border-width};
-    --kendo-autocomplete-border-style: #{$autocomplete-border-style};
-
-    --kendo-autocomplete-border-radius: #{$autocomplete-border-radius};
-
-    --kendo-autocomplete-font-family: #{$autocomplete-font-family};
-    --kendo-autocomplete-font-size: #{$autocomplete-font-size};
-    --kendo-autocomplete-line-height: #{$autocomplete-line-height};
-
-    --kendo-autocomplete-bg: #{$autocomplete-bg};
-    --kendo-autocomplete-text: #{$autocomplete-text};
-    --kendo-autocomplete-border: #{$autocomplete-border};
-    --kendo-autocomplete-shadow: #{$autocomplete-shadow};
-
-    --kendo-autocomplete-hover-bg: #{$autocomplete-hover-bg};
-    --kendo-autocomplete-hover-text: #{$autocomplete-hover-text};
-    --kendo-autocomplete-hover-border: #{$autocomplete-hover-border};
-    --kendo-autocomplete-hover-shadow: #{$autocomplete-hover-shadow};
-
-    --kendo-autocomplete-focus-bg: #{$autocomplete-focus-bg};
-    --kendo-autocomplete-focus-text: #{$autocomplete-focus-text};
-    --kendo-autocomplete-focus-border: #{$autocomplete-focus-border};
-    --kendo-autocomplete-focus-shadow: #{$autocomplete-focus-shadow};
-}
+// Autocomplete
