--- a/packages/nouvelle/scss/colorpicker/_layout.scss
+++ b/packages/nouvelle/scss/colorpicker/_layout.scss
@@ -1,13 +1,4 @@
-@mixin kendo-colorpicker--layout() {
-
-    // sass-lint:disable-block no-important no-ids
-    #test-area .k-colorpicker,
-    #test-area .k-flatcolorpicker,
-    #test-area .k-colorpalette {
-        display: none !important;
-    }
-
-}
+@mixin kendo-colorpicker--layout() {}
 
 
 
