--- a/packages/nouvelle/scss/colorpicker/index.scss
+++ b/packages/nouvelle/scss/colorpicker/index.scss
@@ -1,7 +1,12 @@
 // Module meta
 $_kendo-module-meta: (
     name: "colorpicker",
-    dependencies: ()
+    dependencies: (
+        "input",
+        "icon",
+        "button",
+        "popup"
+    )
 );
 
 
