--- a/packages/nouvelle/scss/combobox/_layout.scss
+++ b/packages/nouvelle/scss/combobox/_layout.scss
@@ -1,63 +1,7 @@
 @mixin kendo-combobox--layout() {
 
-    :where(.k-combobox) {
-        padding: 0;
-        width: 100%;
-        border-width: var( --kendo-combobox-border-width, 1px );
-        border-style: var( --kendo-combobox-border-style, solid );
-        border-radius: var( --kendo-combobox-border-radius, 0 );
-        outline: 0;
-        color: inherit;
-        background: none;
-        font: inherit;
-        font-size: var( --kendo-combobox-font-size, inherit );
-        font-family: var( --kendo-combobox-font-family, inherit );
-        line-height: var( --kendo-combobox-line-height, inherit );
-        display: flex;
-        flex-flow: row nowrap;
-    }
-
     // Combobox
-    .k-combobox {
-
-        // Input
-        .k-input,
-        > .k-input {
-            --kendo-input-padding-x: var( --kendo-combobox-padding-x );
-            --kendo-input-padding-y: var( --kendo-combobox-padding-y );
-        }
-
-
-        // Select
-        .k-select {
-            padding: 0;
-            padding-inline: var( --kendo-combobox-select-padding-x );
-            padding-block: var( --kendo-combobox-select-padding-y );
-            border-width: 0;
-            border-inline-start-width: var( --kendo-combobox-select-border-width, 1px );
-            border-style: var( --kendo-combobox-select-border-style, solid );
-            display: flex;
-            flex-flow: row nowrap;
-            align-items: center;
-            justify-content: center;
-            flex: none;
-            cursor: pointer;
-
-            // TMP
-            .k-i-arrow-s,
-            .k-i-arrow-60-down {
-                font-family: monospace;
-
-                &::before {
-                    content: "\25bc";
-                    display: inline-block;
-                    width: 1em;
-                    font: inherit;
-                }
-            }
-        }
-
-    }
+    .k-combobox {}
 
 }
 
