--- a/packages/nouvelle/scss/combobox/_theme.scss
+++ b/packages/nouvelle/scss/combobox/_theme.scss
@@ -1,51 +1,7 @@
 @mixin kendo-combobox--theme() {
 
-    :where(.k-combobox) {
-        color: var( --kendo-combobox-text, inherit );
-        background-color: var( --kendo-combobox-bg, transparent );
-        border-color: var( --kendo-combobox-border, transparent );
-        box-shadow: var( --kendo-combobox-shadow, none );
-    }
-    :where(.k-combobox .k-select) {
-        color: var( --kendo-combobox-select-text, inherit );
-        background-color: var( --kendo-combobox-select-bg, transparent );
-        border-color: var( --kendo-combobox-select-border, transparent );
-        background-image: linear-gradient( var( --kendo-combobox-select-gradient ) );
-    }
-
     // Combobox
-    .k-combobox {
-
-        // Hover
-        &:hover,
-        &.k-hover {
-            --kendo-combobox-text: var( --kendo-combobox-hover-text );
-            --kendo-combobox-bg: var( --kendo-combobox-hover-bg );
-            --kendo-combobox-border: var( --kendo-combobox-hover-border );
-
-            --kendo-combobox-select-text: var( --kendo-combobox-select-hover-text );
-            --kendo-combobox-select-bg: var( --kendo-combobox-select-hover-bg );
-            --kendo-combobox-select-border: var( --kendo-combobox-select-hover-border );
-            --kendo-combobox-select-gradient: var( --kendo-combobox-select-hover-gradient );
-        }
-
-
-        // Focus
-        &:focus,
-        &.k-focus,
-        &:focus-within {
-            --kendo-combobox-text: var( --kendo-combobox-focus-text );
-            --kendo-combobox-bg: var( --kendo-combobox-focus-bg );
-            --kendo-combobox-border: var( --kendo-combobox-focus-border );
-            --kendo-combobox-shadow: var( --kendo-combobox-focus-shaddow );
-
-            --kendo-combobox-select-text: var( --kendo-combobox-select-focus-text );
-            --kendo-combobox-select-bg: var( --kendo-combobox-select-focus-bg );
-            --kendo-combobox-select-border: var( --kendo-combobox-select-focus-border );
-            --kendo-combobox-select-gradient: var( --kendo-combobox-select-focus-gradient );
-        }
-
-    }
+    .k-combobox {}
 
 }
 
