--- a/packages/nouvelle/scss/core/module-system/_components.scss
+++ b/packages/nouvelle/scss/core/module-system/_components.scss
@@ -26,7 +26,6 @@ $components: (
     "color-preview",
     "loader",
     "loading",
-    "color-preview",
     "skeleton",
     "tooltip",
 
@@ -50,7 +49,7 @@ $components: (
     // Form requirements
     "calendar",
     "popup",
-    "timeselector",
+    "time-selector",
 
     // Augmented inputs
     "autocomplete",
