--- a/packages/nouvelle/scss/dateinput/_layout.scss
+++ b/packages/nouvelle/scss/dateinput/_layout.scss
@@ -1,11 +1,4 @@
-@mixin kendo-dateinput--layout() {
-
-    // sass-lint:disable-block no-important no-ids
-    #test-area .k-dateinput {
-        display: none !important;
-    }
-
-}
+@mixin kendo-dateinput--layout() {}
 
 
 
