--- a/packages/nouvelle/scss/daterangepicker/index.scss
+++ b/packages/nouvelle/scss/daterangepicker/index.scss
@@ -1,7 +1,13 @@
 // Module meta
 $_kendo-module-meta: (
     name: "daterangepicker",
-    dependencies: ()
+    dependencies: (
+        "input",
+        "icon",
+        "button",
+        "popup",
+        "calendar"
+    )
 );
 
 
