--- a/packages/nouvelle/scss/datetimepicker/_layout.scss
+++ b/packages/nouvelle/scss/datetimepicker/_layout.scss
@@ -1,11 +1,4 @@
-@mixin kendo-datetimepicker--layout() {
-
-    // sass-lint:disable-block no-important no-ids
-    #test-area .k-datetimepicker {
-        display: none !important;
-    }
-
-}
+@mixin kendo-datetimepicker--layout() {}
 
 
 
