--- a/packages/nouvelle/scss/datetimepicker/index.scss
+++ b/packages/nouvelle/scss/datetimepicker/index.scss
@@ -1,7 +1,14 @@
 // Module meta
 $_kendo-module-meta: (
     name: "datetimepicker",
-    dependencies: ()
+    dependencies: (
+        "input",
+        "icon",
+        "button",
+        "popup",
+        "calendar",
+        "time-selector"
+    )
 );
 
 
