--- a/packages/nouvelle/scss/dropdowngrid/index.scss
+++ b/packages/nouvelle/scss/dropdowngrid/index.scss
@@ -1,7 +1,13 @@
 // Module meta
 $_kendo-module-meta: (
     name: "dropdowngrid",
-    dependencies: ()
+    dependencies: (
+        "input",
+        "icon",
+        "button",
+        "popup",
+        "table"
+    )
 );
 
 
