--- a/packages/nouvelle/scss/dropdownlist/_theme.scss
+++ b/packages/nouvelle/scss/dropdownlist/_theme.scss
@@ -1,34 +1,7 @@
 @mixin kendo-dropdownlist--theme() {
 
-    :where(.k-dropdown) {
-        color: var( --kendo-dropdownlist-text, inherit );
-        background-color: var( --kendo-dropdownlist-bg, transparent );
-        border-color: var( --kendo-dropdownlist-border, transparent );
-        box-shadow: var( --kendo-dropdownlist-shadow, none );
-    }
-
-    .k-dropdown {
-
-        // Hover
-        &:hover,
-        &.k-hover {
-            --kendo-dropdownlist-text: var( --kendo-dropdownlist-hover-text );
-            --kendo-dropdownlist-bg: var( --kendo-dropdownlist-hover-bg );
-            --kendo-dropdownlist-border: var( --kendo-dropdownlist-hover-border );
-        }
-
-
-        // Focus
-        &:focus,
-        &.k-focus,
-        &:focus-within {
-            --kendo-dropdownlist-text: var( --kendo-dropdownlist-focus-text );
-            --kendo-dropdownlist-bg: var( --kendo-dropdownlist-focus-bg );
-            --kendo-dropdownlist-border: var( --kendo-dropdownlist-focus-border );
-            --kendo-dropdownlist-shadow: var( --kendo-dropdownlist-focus-shaddow );
-        }
-
-    }
+    // Dropdownlist
+    .k-dropdown {}
 
 }
 
