--- a/packages/nouvelle/scss/input/_variables.scss
+++ b/packages/nouvelle/scss/input/_variables.scss
@@ -1,94 +1,219 @@
-$kendo-input-padding-x: k-map-get( $kendo-spacing, 2 ) !default;
-$kendo-input-padding-y: k-map-get( $kendo-spacing, 1 ) !default;
-
+$kendo-input-width: null !default;
 $kendo-input-border-width: 1px !default;
 $kendo-input-border-style: solid !default;
 
-$kendo-input-border-radius: k-map-get( $kendo-spacing, 1 ) !default;
+$kendo-input-focus-border-width: 2px !default;
+
+$kendo-input-sm-padding-x: k-map-get( $kendo-spacing, 2 ) !default;
+$kendo-input-sm-padding-y: k-map-get( $kendo-spacing, 1 ) !default;
+$kendo-input-sm-font-size: $kendo-font-size-sm !default;
+$kendo-input-sm-line-height: $kendo-line-height-sm !default;
+$kendo-input-sm-icon-size: calc( #{$kendo-icon-size-md} + #{$kendo-input-sm-padding-y * 2} ) !default;
+$kendo-input-sm-button-padding-x: $kendo-input-sm-padding-y !default;
+$kendo-input-sm-button-padding-y: $kendo-input-sm-padding-y !default;
+$kendo-input-sm-button-width: null !default;
+$kendo-input-sm-spinner-width: null !default;
+$kendo-input-sm-spinner-icon-offset: null !default;
+
+$kendo-input-md-padding-x: k-map-get( $kendo-spacing, 2 ) !default;
+$kendo-input-md-padding-y: k-map-get( $kendo-spacing, 1 ) + k-map-get( $kendo-spacing, thin ) !default;
+$kendo-input-md-font-size: $kendo-font-size-md !default;
+$kendo-input-md-line-height: $kendo-line-height-md !default;
+$kendo-input-md-icon-size: calc( #{$kendo-icon-size-md} + #{$kendo-input-md-padding-y * 2} ) !default;
+$kendo-input-md-button-padding-x: $kendo-input-md-padding-y !default;
+$kendo-input-md-button-padding-y: $kendo-input-md-padding-y !default;
+$kendo-input-md-button-width: null !default;
+$kendo-input-md-spinner-width: null !default;
+$kendo-input-md-spinner-icon-offset: null !default;
+
+$kendo-input-lg-padding-x: k-map-get( $kendo-spacing, 2 ) !default;
+$kendo-input-lg-padding-y: k-map-get( $kendo-spacing, 2 ) !default;
+$kendo-input-lg-font-size: $kendo-font-size-lg !default;
+$kendo-input-lg-line-height: $kendo-line-height-lg !default;
+$kendo-input-lg-icon-size: calc( #{$kendo-icon-size-md} + #{$kendo-input-lg-padding-y * 2} ) !default;
+$kendo-input-lg-button-padding-x: $kendo-input-lg-padding-y !default;
+$kendo-input-lg-button-padding-y: $kendo-input-lg-padding-y !default;
+$kendo-input-lg-button-width: null !default;
+$kendo-input-lg-spinner-width: null !default;
+$kendo-input-lg-spinner-icon-offset: null !default;
 
 $kendo-input-font-family: $kendo-font-family !default;
-$kendo-input-font-size: $kendo-font-size-md !default;
-$kendo-input-line-height: $kendo-line-height-md !default;
+$kendo-input-font-weight: normal !default;
+
+$kendo-input-button-border-width: 1px !default;
 
 
-/// The background of the input.
-/// @group input
-$kendo-input-bg: $kendo-component-bg !default;
-/// The text color of the input.
-/// @group input
-$kendo-input-text: $kendo-component-text !default;
-/// The border color of the input.
-/// @group input
-$kendo-input-border: $kendo-component-border !default;
-$kendo-input-shadow: null !default;
-
-/// The background of hovered input.
-/// @group input
-$kendo-input-hover-bg: $kendo-input-bg !default;
-/// The text color of hovered input.
-/// @group input
-$kendo-input-hover-text: $kendo-input-text !default;
-/// The border color of hovered input.
-/// @group input
-$kendo-input-hover-border: k-try-shade( $kendo-input-border, 1 ) !default;
-$kendo-input-hover-shadow: null !default;
-
-/// The background color of focus input.
-/// @group input
-$kendo-input-focus-bg: $kendo-input-hover-bg !default;
-/// The text color of focus input.
-/// @group input
-$kendo-input-focus-text: $kendo-input-hover-text !default;
-/// The border color of focus input.
-/// @group input
-$kendo-input-focus-border: $kendo-input-hover-border !default;
-$kendo-input-focus-shadow: 0 0 0 2px rgba( if( $dark-theme, $white, $black), .08 ) !default;
-
-
-// Input actions
-$kendo-input-button-width: null !default;
-$kendo-input-button-border-width: 0px !default;
-$kendo-input-spinner-width: null !default;
-$kendo-input-spinner-icon-offset: null !default;
-
-
-// Input icon
-$kendo-input-icon-width: $kendo-icon-size !default;
-$kendo-input-icon-height: $kendo-icon-size !default;
+// Input sizes
+$kendo-input-sizes: (
+    sm: (
+        padding-x: $kendo-input-sm-padding-x,
+        padding-y: $kendo-input-sm-padding-y,
+        font-size: $kendo-input-sm-font-size,
+        line-height: $kendo-input-sm-line-height,
+        icon-size: $kendo-input-sm-icon-size,
+        button-padding-x: $kendo-input-sm-button-padding-x,
+        button-padding-y: $kendo-input-sm-button-padding-y,
+        button-width: $kendo-input-sm-button-width,
+        spinner-width: $kendo-input-sm-spinner-width,
+        spinner-icon-offset: $kendo-input-sm-spinner-icon-offset
+    ),
+    md: (
+        padding-x: $kendo-input-md-padding-x,
+        padding-y: $kendo-input-md-padding-y,
+        font-size: $kendo-input-md-font-size,
+        line-height: $kendo-input-md-line-height,
+        icon-size: $kendo-input-md-icon-size,
+        button-padding-x: $kendo-input-md-button-padding-x,
+        button-padding-y: $kendo-input-md-button-padding-y,
+        button-width: $kendo-input-md-button-width,
+        spinner-width: $kendo-input-md-spinner-width,
+        spinner-icon-offset: $kendo-input-md-spinner-icon-offset
+    ),
+    lg: (
+        padding-x: $kendo-input-lg-padding-x,
+        padding-y: $kendo-input-lg-padding-y,
+        font-size: $kendo-input-lg-font-size,
+        line-height: $kendo-input-lg-line-height,
+        icon-size: $kendo-input-lg-icon-size,
+        button-padding-x: $kendo-input-lg-button-padding-x,
+        button-padding-y: $kendo-input-lg-button-padding-y,
+        button-width: $kendo-input-lg-button-width,
+        spinner-width: $kendo-input-lg-spinner-width,
+        spinner-icon-offset: $kendo-input-lg-spinner-icon-offset
+    )
+) !default;
 
 
-// Input separator
-$kendo-input-separator-color: $kendo-input-text !default;
-$kendo-input-separator-opacity: .5 !default;
+// Input theme
+$kendo-input-ui-states: (
+    hover,
+    focus,
+    disabled,
+    valid,
+    invalid
+) !default;
+
+$kendo-input-theme-matrix: (
+
+    solid: (
+        PALETTE: neutral,
+        DEFAULT: ( 0, 700, 200 ),
+
+        hover: ( 0, 700, 300 ),
+        focus: ( 0, 700, 300, null, 0 0 0 2px rgba( if( $dark-theme, $white, $black), .08 ) ),
+        focus-hover: ( 0, 700, 300, null, 0 0 0 2px rgba( if( $dark-theme, $white, $black), .08 ) ),
+        invalid: ( 0, 700, k-get-theme-color( primerRed, 500 ) ),
+        invalid-focus: ( 0, 700, k-get-theme-color( primerRed, 500 ) ),
+        valid: ( 0, 700, 300 ),
+        valid-focus: ( 0, 700, 300 ),
+
+        disabled: ( 0, 600, 100 )
+    ),
+
+    outline: (
+        PALETTE: neutral,
+        DEFAULT: ( transparent, 700, 200 ),
+
+        hover: ( transparent, 700, 300 ),
+        focus: ( transparent, 700, 300, null, 0 0 0 2px rgba( if( $dark-theme, $white, $black), .08 ) ),
+        focus-hover: ( transparent, 700, 300, null, 0 0 0 2px rgba( if( $dark-theme, $white, $black), .08 ) ),
+        invalid: ( transparent, 700, k-get-theme-color( primerRed, 500 ) ),
+        invalid-focus: ( transparent, 700, k-get-theme-color( primerRed, 500 ) ),
+        valid: ( transparent, 700, 300 ),
+        valid-focus: ( transparent, 700, 300 ),
+
+        disabled: ( transparent, 600, 100 )
+    ),
+
+    flat: (
+        PALETTE: neutral,
+        DEFAULT: ( transparent, 700, 200 ),
+
+        hover: ( transparent, 700, 300 ),
+        focus: ( transparent, 700, 300, null, 0 0 0 2px rgba( if( $dark-theme, $white, $black), .08 ) ),
+        focus-hover: ( transparent, 700, 300, null, 0 0 0 2px rgba( if( $dark-theme, $white, $black), .08 ) ),
+        invalid: ( transparent, 700, k-get-theme-color( primerRed, 500 ) ),
+        invalid-focus: ( transparent, 700, k-get-theme-color( primerRed, 500 ) ),
+        valid: ( transparent, 700, 300 ),
+        valid-focus: ( transparent, 700, 300 ),
+
+        disabled: ( transparent, 600, 100 )
+    )
+
+) !default;
+
+$kendo-input-theme: k-process-variant-matrices( $kendo-input-theme-matrix, null ) !default;
 
 
+// Picker theme
+$kendo-picker-ui-states: $kendo-input-ui-states !default;
+
+$kendo-picker-theme-matrix: (
+
+    solid: (
+        PALETTE: neutral,
+        DEFAULT: ( 50, 700, 200 ),
+
+        hover: ( 100, 700, 300 ),
+        focus: ( 200, 800, 400, null, 0 0 0 2px rgba( if( $dark-theme, $white, $black), .08 ) ),
+        focus-hover: ( 200, 800, 400, null, 0 0 0 2px rgba( if( $dark-theme, $white, $black), .08 ) ),
+        invalid: ( 50, 700, k-get-theme-color( primerRed, 500 ) ),
+        invalid-focus: ( 200, 800, k-get-theme-color( primerRed, 500 ) ),
+        valid: ( 50, 700, k-get-theme-color( primerGreen, 500 ) ),
+        valid-focus: ( 200, 800, k-get-theme-color( primerGreen, 500 ) ),
+
+        disabled: ( 100, 700, 300 )
+    ),
+
+    outline: (
+        PALETTE: neutral,
+        DEFAULT: ( transparent, 500, 500 ),
+
+        hover: ( 600, 0, 600 ),
+        focus: ( 700, 0, 700, null, 0 0 0 2px rgba( if( $dark-theme, $white, $black), .08 ) ),
+        focus-hover: ( 700, 0, 700, null, 0 0 0 2px rgba( if( $dark-theme, $white, $black), .08 ) ),
+        invalid: ( transparent, 500, k-get-theme-color( primerRed, 500 ) ),
+        invalid-focus: ( 700, 0, k-get-theme-color( primerRed, 500 ) ),
+        valid: ( transparent, 500, k-get-theme-color( primerGreen, 500 ) ),
+        valid-focus: ( 700, 0, k-get-theme-color( primerGreen, 500 ) ),
+
+        disabled: ( 0, 400, 400 )
+    ),
+
+    flat: (
+        PALETTE: neutral,
+        DEFAULT: ( 0, 500, 0 ),
+
+        hover: ( 50, 600, 50 ),
+        focus: ( 100, 700, 100, null, 0 0 0 2px rgba( if( $dark-theme, $white, $black), .08 ) ),
+        focus-hover: ( 100, 700, 100, null, 0 0 0 2px rgba( if( $dark-theme, $white, $black), .08 ) ),
+        invalid: ( 0, 500, k-get-theme-color( primerRed, 500 ) ),
+        invalid-focus: ( 100, 700, k-get-theme-color( primerRed, 500 ) ),
+        valid: ( 0, 500, 300, k-get-theme-color( primerGreen, 500 ) ),
+        valid-focus: ( 100, 700, 300, k-get-theme-color( primerGreen, 500 ) ),
+
+        disabled: ( 0, 400, 0 )
+    )
+
+) !default;
+
+$kendo-picker-theme: k-process-variant-matrices( $kendo-picker-theme-matrix, null ) !default;
 
 
-// Expose
-:root {
-    --kendo-input-padding-x: #{$kendo-input-padding-x};
-    --kendo-input-padding-y: #{$kendo-input-padding-y};
-    --kendo-input-border-width: #{$kendo-input-border-width};
-    --kendo-input-border-style: #{$kendo-input-border-style};
+// Placeholder
+$kendo-input-placeholder-text: k-map-get( $kendo-input-theme, solid, text ) !default;
+$kendo-input-placeholder-opacity: 1 !default;
 
-    --kendo-input-border-radius: #{$kendo-input-border-radius};
 
-    --kendo-input-font-family: #{$kendo-input-font-family};
-    --kendo-input-font-size: #{$kendo-input-font-size};
-    --kendo-input-line-height: #{$kendo-input-line-height};
+// Clear value
+$kendo-input-clear-value-text: k-map-get( $kendo-input-theme, solid, text ) !default;
+$kendo-input-clear-value-opacity: .5 !default;
+$kendo-input-clear-value-hover-text: k-map-get( $kendo-input-theme, solid, text ) !default;
+$kendo-input-clear-value-hover-opacity: 1 !default;
 
-    --kendo-input-bg: #{$kendo-input-bg};
-    --kendo-input-text: #{$kendo-input-text};
-    --kendo-input-border: #{$kendo-input-border};
-    --kendo-input-shadow: #{$kendo-input-shadow};
 
-    --kendo-input-hover-bg: #{$kendo-input-hover-bg};
-    --kendo-input-hover-text: #{$kendo-input-hover-text};
-    --kendo-input-hover-border: #{$kendo-input-hover-border};
-    --kendo-input-hover-shadow: #{$kendo-input-hover-shadow};
-
-    --kendo-input-focus-bg: #{$kendo-input-focus-bg};
-    --kendo-input-focus-text: #{$kendo-input-focus-text};
-    --kendo-input-focus-border: #{$kendo-input-focus-border};
-    --kendo-input-focus-shadow: #{$kendo-input-focus-shadow};
-}
+// Validation icon
+$kendo-input-valid-icon-text: k-get-theme-color( primerGreen, 500 ) !default;
+$kendo-input-invalid-icon-text: k-get-theme-color( primerRed, 500 ) !default;
+$kendo-picker-valid-icon-text: k-get-theme-color( primerGreen, 500 ) !default;
+$kendo-picker-invalid-icon-text: k-get-theme-color( primerRed, 500 ) !default;
