--- a/packages/nouvelle/scss/numerictextbox/index.scss
+++ b/packages/nouvelle/scss/numerictextbox/index.scss
@@ -1,7 +1,11 @@
 // Module meta
 $_kendo-module-meta: (
     name: "numerictextbox",
-    dependencies: ()
+    dependencies: (
+        "input",
+        "icon",
+        "button"
+    )
 );
 
 
