chore(treelist): prefix variables with $kendo-
BREAKING CHANGE: Added kendo prefix to all treelist variables:

Change variable names from `$treelist-*` to `$kendo-treelist-*`.

--- a/packages/material/scss/treelist/_variables.scss
+++ b/packages/material/scss/treelist/_variables.scss
@@ -1,3 +1,3 @@
 // Treelist
-$treelist-footer-row-bg: $kendo-grid-selected-bg !default;
-$treelist-footer-row-border-width: 1px !default;
+$kendo-treelist-footer-row-bg: $kendo-grid-selected-bg !default;
+$kendo-treelist-footer-row-border-width: 1px !default;
