--- a/packages/bootstrap/scss/treelist/_variables.scss
+++ b/packages/bootstrap/scss/treelist/_variables.scss
@@ -1,3 +1,3 @@
 // Treelist
-$treelist-footer-row-bg: $kendo-grid-header-bg !default;
-$treelist-footer-row-border-width: 1px !default;
+$kendo-treelist-footer-row-bg: $kendo-grid-header-bg !default;
+$kendo-treelist-footer-row-border-width: 1px !default;
