--- a/packages/default/scss/filemanager/_layout.scss
+++ b/packages/default/scss/filemanager/_layout.scss
@@ -187,6 +187,7 @@
             text-align: start;
             display: flex;
             flex-flow: row wrap;
+            grid-column-gap: $filemanager-preview-column-gap;
         }
         .k-file-meta-label {
             display: inline-block;
